# graphics-experiments

./: .gitignore  CMakeLists.txt  CmakeLists.txt  README.md  TODO  bark.tgr  cell.txt  cmake_build.bat  grass.psd  grass.tgr  makefile  notes  old_sphere.cpp  shader_code_style  wood.tgr  wood2.tgr
ewa/: aabb.hpp  application.cpp  application.hpp  bt_util.cpp  bt_util.hpp  buffered_file_reader.cpp  buffered_file_reader.hpp  camera.cpp  camera.hpp  colonization.cpp  colonization.hpp  common.hpp  config.cpp  config.hpp  cube.cpp  cube.hpp  eob_file.cpp  eob_file.hpp  file.cpp  file.hpp  font.cpp  font.hpp  geometry_object.cpp  geometry_object.hpp  geometry_object_data.hpp  geometry_object_listener.hpp  gpu_profiler.cpp  gpu_profiler.hpp  gui_mouse_state.cpp  height_map.cpp  height_map.hpp  icamera.cpp  icamera.hpp  igeometry_object.hpp  imgui_wrapper.cpp  imgui_wrapper.hpp  keyboard_state.cpp  keyboard_state.hpp  line.cpp  line.hpp  (+44 more)
game/: main.cpp  makefile  tuhu_application.cpp  tuhu_application.hpp
glut/: a.out  make.sh  test.cpp
img/: cloud.pgm  height.pgm  im.py
img_lib/: Ubuntu-B-64.amf
py/: sun.py
samples/: CMakeLists.txt  car_blend.mtl
samples/ao/: CMakeLists.txt  makefile
samples/ao/src/: ao_application.cpp  ao_application.hpp  ao_gui.cpp  ao_gui.hpp  main.cpp  position_fbo.cpp  position_fbo.hpp  ray_tracer.cpp  ray_tracer.hpp  simple_render.cpp  simple_render.hpp
samples/cellular/: CMakeLists.txt  makefile
samples/cellular/shader/: .#simple_fs.glsl  .#simple_vs.glsl  cellular_fs.glsl  cellular_vs.glsl  perlin_fs.glsl  perlin_vs.glsl  simple_fs.glsl  simple_vs.glsl
samples/cellular/src/: cellular_application.cpp  cellular_application.hpp  cube.cpp  cube.hpp  main.cpp  plane.cpp  plane.hpp
samples/cloud_gen/: CMakeLists.txt  makefile
samples/cloud_gen/src/: main.cpp
samples/game/: CMakeLists.txt  car_blend.eob  imgui.ini  makefile  test_cloud_approx.tga
samples/game/hello.world/: grass  objs
samples/game/hello2.world/: grass  objs
samples/game/img/: asphalt.dds  asphalt_lq.dds  cloud.pgm  dirt.dds  dirt.tgr  dirt_lq.dds  fire.psd  fire2.psd  fire4.psd  grass.dds  grass_lq.dds  im.py  particle.psd  rain.psd  rock.dds  rock.tgr  rock_lq.dds  smoke.psd  snow.psd  sparkle.psd  test_cloud2_copy.tga
samples/game/shader/: billboard_fs.glsl  billboard_vs.glsl  car_fs.glsl  composite_fs.glsl  composite_vs.glsl  cube_cursor_fs.glsl  cube_cursor_vs.glsl  directional_fs.glsl  draw_normals_gs.glsl  env_map_lib.glsl  fxaa_fs.glsl  fxaa_vs.glsl  geo_obj_draw_outline_fs.glsl  geo_obj_draw_outline_vs.glsl  geo_obj_env_render_fs.glsl  geo_obj_env_render_vs.glsl  geo_obj_output_depth_fs.glsl  geo_obj_output_depth_vs.glsl  geo_obj_output_id_fs.glsl  geo_obj_render_fs.glsl  geo_obj_render_vs.glsl  grass_billboard_fs.glsl  grass_billboard_vs.glsl  grass_fs.glsl  grass_vs.glsl  grid_fs.glsl  grid_vs.glsl  height_map_cursor_fs.glsl  height_map_cursor_vs.glsl  height_map_env_render_fs.glsl  height_map_env_render_vs.glsl  height_map_fs.glsl  height_map_lib.glsl  height_map_output_depth_vs.glsl  height_map_output_id_fs.glsl  height_map_output_id_vs.glsl  height_map_render_fs.glsl  height_map_render_vs.glsl  height_map_vs.glsl  lighting_lib.glsl  (+30 more)
samples/game/src/: .#particle_system.cpp  .#tuhu_application.cpp  biased_random.hpp  car.cpp  car.hpp  car_camera.cpp  car_camera.hpp  cocoa_util.hpp  cocoa_util.m  dual_paraboloid_map.cpp  dual_paraboloid_map.hpp  env_camera.cpp  env_camera.hpp  env_fbo.cpp  env_fbo.hpp  fire_effect.cpp  gbuffer.cpp  gbuffer.hpp  grass.cpp  grass.hpp  grid.cpp  grid.hpp  gui.cpp  gui.hpp  gui_enum.hpp  gui_listener.hpp  gui_mouse_state.cpp  gui_mouse_state.hpp  height_map.cpp  height_map.hpp  imgui_wrapper.cpp  imgui_wrapper.hpp  lighting_pass.cpp  lighting_pass.hpp  mah_value_noise.cpp  mah_value_noise.hpp  main.cpp  particle_system.cpp  particle_system.h  particle_system.hpp  (+18 more)
samples/game_engine/: CMakeLists.txt  imgui.ini
samples/game_engine/img/: particle.psd  smoke2.psd  tex.tgr
samples/game_engine/shader/: billboard_vs.glsl  height_map_fs.glsl  height_map_vs.glsl  part_billboard_gs.glsl  part_update_gs.glsl  skydome_vs.glsl
samples/game_engine/src/: fire_effect.hpp  grass.hpp  skydome.hpp  smoke_effect.cpp  smoke_effect.hpp  snow_effect.cpp  tuhu_application.cpp  tuhu_application.hpp
samples/grass/: CMakeLists.txt  makefile
samples/grass/img/: grass2.psd
samples/grass/shader/: draw_normals_fs.glsl  draw_normals_vs.glsl  grass_fs.glsl  grass_vs.glsl  plane_fs.glsl  plane_vs.glsl  post_fs.glsl  post_vs.glsl
samples/grass/src/: grass.cpp  grass.hpp  grass_application.cpp  grass_application.hpp  grasses.hpp  main.cpp  msaa_fbo.cpp  msaa_fbo.hpp  plane.cpp  plane.hpp
samples/gui/: CMakeLists.txt  imgui.ini  imgui_impl_glfw_gl3.cpp  main.cpp  makefile
samples/obj_conv/: CMakeLists.txt  cube.eob  cube.mtl  makefile  smooth_sphere.mtl
samples/obj_conv/src/: buffered_file_reader.cpp  main.cpp
samples/perlin_skybox/: CMakeLists.txt  makefile
samples/perlin_skybox/shader/: skydome_fs.glsl  skydome_vs.glsl
samples/perlin_skybox/src/: main.cpp  perlin_skybox_application.cpp  perlin_skybox_application.hpp  skydome.cpp  skydome.hpp
samples/scattering/: CMakeLists.txt  makefile
samples/scattering/shader/: post_fs.glsl  post_vs.glsl  sphere_fs.glsl  sphere_vs.glsl
samples/scattering/src/: main.cpp  scattering_application.cpp  scattering_application.hpp  skydome.cpp  skydome.hpp
samples/skybox/: CMakeLists.txt  makefile
samples/skybox/shader/: skybox_fs.glsl  skybox_vs.glsl
samples/skybox/src/: main.cpp  skybox.cpp  skybox.hpp  skybox_application.cpp  skybox_application.hpp
samples/testing/: CMakeLists.txt  makefile
samples/testing/src/: main.cpp
samples/tree/: CMakeLists.txt  makefile
samples/tree/shader/: phong_fs.glsl  phong_vs.glsl
samples/tree/src/: colonization.cpp  colonization.hpp  main.cpp  tree.cpp  tree.hpp  tree_application.cpp  tree_application.hpp
samples/tri/: CMakeLists.txt  makefile
samples/tri/src/: main.cpp  perlin.hpp  util.hpp
shader/: draw_normals_vs.glsl  font_render_fs.glsl  (+17 more)
(+204 files in other folders)
